# travel-data-platform

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: batch-fetch-prices.yml  python-ci.yml
alembic/: env.py
alembic/versions/: 54d4867c8013_create_ingestion_tables.py  bca04441d6f4_create_app_flight_alert_events.py  c515d7b19587_create_app_flight_watches.py
src/travel_data_platform/: __init__.py  config.py  exceptions.py  logging.py
src/travel_data_platform/database/: session.py
src/travel_data_platform/database/models/: __init__.py  fetch_run.py  flight_alert_event.py  flight_watch.py  normalized_flight_offer.py  raw_flight_offer.py
src/travel_data_platform/domain/: alert.py  flight.py  ingestion.py
src/travel_data_platform/pipelines/flight_prices/: service.py
src/travel_data_platform/providers/: base.py
src/travel_data_platform/providers/google_flights/: client.py  fetcher.py  parser.py  schemas.py
src/travel_data_platform/providers/google_flights/debug/: artifacts.py
src/travel_data_platform/providers/google_flights/fetchers/: base.py  browser_fetcher.py  playwright_fetcher.py  tfs_fetcher.py
src/travel_data_platform/providers/google_flights/runtime/: browser_runtime.py
src/travel_data_platform/repositories/: __init__.py  fetch_run_repository.py  flight_alert_event_repository.py  flight_price_monitoring_repository.py  flight_watch_repository.py  normalized_flight_offer_repository.py  raw_flight_offer_repository.py
src/travel_data_platform/services/: alert_rule_evaluator.py  batch_ingestion_service.py  flight_price_service.py  flight_watch_service.py  ingestion_service.py  watch_query_service.py
src/travel_data_platform/workers/: batch_fetch_prices.py  fetch_prices.py  probe_route.py  seed_flight_watches.py  test_db.py
tests/unit/: test_alert_rule_evaluator.py  test_flight_price_service.py  test_google_browser_fetcher.py  test_google_browser_fetcher_live.py  test_google_parser.py  test_google_provider.py  test_google_tfs_fetcher.py
