[project]
name = "travel-data-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Trần Bảo Trung", email = "152236723+trungtb-cyberk@users.noreply.github.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.18.4",
    "playwright>=1.58.0",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.48",
    "tenacity>=9.1.4",
]

[project.scripts]
travel-data-platform = "travel_data_platform:main"

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.7",
]
