[project]
name = "travel-data-platform"
version = "0.1.0"
description = "Flight price ingestion worker and travel data platform foundation"
readme = "README.md"
authors = [
  { name = "Trần Bảo Trung", email = "baotrung06092003@gmail.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.18.4",
  "playwright>=1.58.0",
  "psycopg[binary]>=3.3.3",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.13.1",
  "sqlalchemy>=2.0.48",
  "tenacity>=9.1.4",
]

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "mypy>=1.20.0",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "ruff>=0.15.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
  "playwright.*",
]
ignore_missing_imports = true